--- a/testbro-frontend/package.json
+++ b/testbro-frontend/package.json
@@ -51,7 +51,7 @@
     "cmdk": "^1.0.0",
     "d3": "^7.9.0",
     "d3-sankey": "^0.12.3",
-    "date-fns": "^3.6.0",
+    "date-fns": "^3.0.0",
     "diff": "^6.0.0-beta",
     "diff-match-patch": "^1.0.5",
     "echarts-for-react": "^3.0.2",
@@ -113,6 +113,12 @@
     "xlsx": "^0.18.5",
     "yup": "^1.4.0",
     "zod": "^3.23.8"
+  },
+  "overrides": {
+    "date-fns": {
+      "main": "./esm/index.js",
+      "module": "./esm/index.js"
+    }
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
