--- a/package.json
+++ b/package.json
@@ -1,7 +1,43 @@
 {
+  "name": "testbro",
+  "version": "1.0.0",
+  "description": "AI-powered automated testing platform",
+  "scripts": {
+    "dev": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
+    "dev:backend": "cd testbro-backend && npm run dev",
+    "dev:frontend": "cd testbro-frontend && npm run dev",
+    "build": "npm run build:backend && npm run build:frontend",
+    "build:backend": "cd testbro-backend && npm run build",
+    "build:frontend": "cd testbro-frontend && npm run build",
+    "test": "npm run test:backend && npm run test:frontend",
+    "test:backend": "cd testbro-backend && npm test",
+    "test:frontend": "cd testbro-frontend && npm test",
+    "test:integration": "cd scripts && npm install && node service-integration-test.js",
+    "test:integration:quick": "cd scripts && npm install && node quick-integration-test.js",
+    "test:integration:backend": "cd testbro-backend && npm test -- tests/integration/service-integration.test.ts",
+    "test:integration:frontend": "cd testbro-frontend && npm test -- src/__tests__/integration/frontend-integration.test.tsx",
+    "lint": "npm run lint:backend && npm run lint:frontend",
+    "lint:backend": "cd testbro-backend && npm run lint",
+    "lint:frontend": "cd testbro-frontend && npm run lint",
+    "start": "npm run dev"
+  },
   "dependencies": {
     "@types/jspdf": "^1.3.3",
     "html2canvas": "^1.4.1",
-    "jspdf": "^3.0.2"
-  }
+    "jspdf": "^3.0.2",
+    "concurrently": "^8.2.0"
+  },
+  "devDependencies": {
+    "axios": "^1.6.0"
+  },
+  "keywords": [
+    "testing",
+    "automation",
+    "ai",
+    "playwright",
+    "react",
+    "typescript"
+  ],
+  "author": "TestBro Team",
+  "license": "MIT"
 }
