--- a/testbro-backend/package.json
+++ b/testbro-backend/package.json
@@ -12,7 +12,14 @@
     "test:full": "jest",
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "migrate": "node scripts/migrate.js",
+    "migrate:up": "node scripts/migrate.js up",
+    "migrate:down": "node scripts/migrate.js down",
+    "migrate:status": "node scripts/migrate.js status",
+    "migrate:seed": "node scripts/migrate.js seed",
+    "migrate:create": "node scripts/migrate.js create",
+    "migrate:reset": "node scripts/migrate.js reset"
   },
   "keywords": [
     "testing",
@@ -25,32 +32,39 @@
   "license": "MIT",
   "dependencies": {
     "@supabase/supabase-js": "^2.39.0",
+    "@types/bull": "^3.15.9",
     "@types/compression": "^1.8.1",
+    "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^7.0.1",
     "@types/pg": "^8.15.5",
     "ajv": "^8.17.1",
+    "bull": "^4.16.5",
+    "bull-board": "^1.7.2",
     "bullmq": "^4.15.0",
     "compression": "^1.8.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^8.0.1",
+    "express-validator": "^7.2.1",
     "helmet": "^7.1.0",
     "ioredis": "^5.3.2",
     "isomorphic-dompurify": "^2.26.0",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^4.2.1",
     "nodemailer": "^7.0.5",
-    "openai": "^4.24.0",
+    "openai": "^4.104.0",
     "pg": "^8.16.3",
-    "playwright": "^1.40.1",
+    "playwright": "^1.55.0",
     "sharp": "^0.34.3",
     "socket.io": "^4.7.4",
     "uuid": "^9.0.1",
     "validator": "^13.15.15",
     "winston": "^3.11.0",
     "winston-daily-rotate-file": "^5.0.0",
+    "xml2js": "^0.6.2",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -63,6 +77,7 @@
     "@types/supertest": "^6.0.3",
     "@types/uuid": "^9.0.7",
     "@types/validator": "^13.15.2",
+    "@types/xml2js": "^0.4.14",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "eslint": "^8.55.0",
