--- a/testbro-frontend/package.json
+++ b/testbro-frontend/package.json
@@ -1,15 +1,22 @@
 {
-  "name": "polymet-react-app",
+  "name": "testbro-frontend",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint:fix": "eslint . --ext ts,tsx --fix",
+    "preview": "vite preview --host",
     "test": "vitest",
-    "test:ui": "vitest --ui"
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest --coverage",
+    "type-check": "tsc --noEmit",
+    "format": "prettier --write 'src/**/*.{ts,tsx,js,jsx,json,css,md}'",
+    "format:check": "prettier --check 'src/**/*.{ts,tsx,js,jsx,json,css,md}'",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
@@ -103,7 +110,7 @@
     "react-syntax-highlighter": "latest",
     "react-type-animation": "latest",
     "reactflow": "latest",
-    "recharts": "^2.15.1",
+    "recharts": "^2.15.4",
     "socket.io-client": "^4.8.1",
     "sonner": "^2.0.1",
     "styled-components": "^6.1.13",
@@ -124,22 +131,44 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@storybook/addon-essentials": "^8.0.0",
+    "@storybook/addon-interactions": "^8.0.0",
+    "@storybook/addon-links": "^8.0.0",
+    "@storybook/blocks": "^8.0.0",
+    "@storybook/react": "^8.0.0",
+    "@storybook/react-vite": "^8.0.0",
+    "@storybook/test": "^8.0.0",
     "@testing-library/jest-dom": "^6.1.0",
     "@testing-library/react": "^14.1.0",
     "@testing-library/user-event": "^14.5.0",
+    "@types/aos": "^3.0.7",
+    "@types/canvas-confetti": "^1.6.4",
+    "@types/d3": "^7.4.3",
+    "@types/diff": "^5.2.2",
+    "@types/diff-match-patch": "^1.0.36",
+    "@types/leaflet": "^1.9.12",
     "@types/node": "^22.13.9",
+    "@types/papaparse": "^5.3.14",
     "@types/react": "^19.0.10",
+    "@types/react-big-calendar": "^1.8.9",
     "@types/react-dom": "^19.0.4",
+    "@types/react-syntax-highlighter": "^15.5.13",
+    "@types/three": "^0.167.2",
     "@vitejs/plugin-react": "^4.3.4",
+    "@vitest/coverage-v8": "^1.0.0",
     "@vitest/ui": "^1.0.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "eslint-plugin-storybook": "^0.8.0",
     "globals": "^15.15.0",
     "jsdom": "^23.0.0",
     "postcss": "^8.5.3",
+    "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.14",
     "rollup-plugin-visualizer": "^6.0.3",
+    "storybook": "^8.0.0",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
